--- a/app/src/main/res/layout/activity_createaccount.xml
+++ b/app/src/main/res/layout/activity_createaccount.xml
@@ -10,50 +10,56 @@
     tools:context=".CreateAccount">
 
     <EditText
-        android:id="@+id/Name"
+        android:id="@+id/createname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/name"
         android:inputType="textPersonName"/>
 
     <EditText
-        android:id="@+id/CreateAccount"
+        android:id="@+id/createemail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:layout_below="@id/Name"
+        android:layout_below="@id/createname"
         android:inputType="textEmailAddress"/>
 
     <EditText
-        android:id="@+id/CreatePassword"
+        android:id="@+id/createpassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/Password"
-        android:layout_below="@id/CreateAccount"/>
+        android:layout_below="@id/createemail"/>
+    <CalendarView
+        android:id="@+id/birthday"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:layout_below="@id/createpassword"/>
 
     <ProgressBar
-        android:id="@+id/ProgressBar"
+        android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:visibility="gone"
         android:padding="200dp"
-        android:layout_below="@id/CreatePassword"/>
+        android:layout_below="@id/createpassword"/>
 
     <Button
-        android:id="@+id/Signup"
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/CreatePassword"
+        android:layout_below="@id/birthday"
         android:text="@string/createaccount"/>
 
     <TextView
         android:id="@+id/Alreadyhaveacount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Signup"
+        android:layout_below="@id/register"
         android:gravity="center"
-        android:paddingTop="500dp"
+        android:padding="20dp"
+        android:onClick="Alreadyhaveacount"
         android:text="@string/alreadyamember"/>
 
 </RelativeLayout>
